fixes footer overlap

--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,6 @@
   background-color: #262626;
   color: #ffffff;
   font-family: 'Inconsolata', monospace;
-  position: relative;
 }
 .HeroContainer {
   width: 92%;
